# simple-chat

./: .gitignore  README.md  pyproject.toml
chat/: admin.py  constants.py  factories.py  models.py  pagination.py  serializers.py  urls.py  views.py
chat/migrations/: 0001_initial.py
chat/tests/: tests.py
core/: models.py
simple_chat/: db.sqlite3  settings.py  urls.py
user/: factories.py  models.py  pagination.py  serializers.py  tests.py  urls.py  views.py
user/migrations/: 0001_initial.py
